--- a/helwa-webapp/app.yaml
+++ b/helwa-webapp/app.yaml
@@ -5,8 +5,8 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /bootstrap
-  static_dir: bootstrap
+- url: /js
+  static_dir: js
 
 - url: /.*
   script: helwa.application
